--- a/SpringEmployeeDataJPA/src/main/resources/application.properties
+++ b/SpringEmployeeDataJPA/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=1111
+server.port=3456
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=anurag
 spring.datasource.password=anurag123
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 security.user.name=varsha
-security.user.password=varsha123
+security.user.passsword=varsha123
